# react-qjs-native

./: .gitignore  meson.build  package.json
babel/: index.js  run.sh
flutter/: README.md
flutter/android/app/: build.gradle
flutter/android/app/src/main/kotlin/com/example/rn/: MainActivity.kt
flutter/ios/Runner/: Info.plist
flutter/ios/Runner.xcodeproj/: project.pbxproj
flutter/lib/: main.dart
flutter/linux/: CMakeLists.txt
flutter/windows/: CMakeLists.txt
flutter/windows/runner/: Runner.rc  main.cpp
native/: main.cpp
renderers/flutter/: pubspec.yaml
renderers/flutter/android/app/: build.gradle
renderers/flutter/android/app/src/main/: AndroidManifest.xml
renderers/flutter/android/app/src/profile/: AndroidManifest.xml
renderers/flutter/lib/: element.dart  main.dart
renderers/flutter/lib/components/: button.dart  component.dart  flatlist.dart  icon.dart  scrollview.dart  text.dart  textinput.dart  view.dart
renderers/flutter/linux/: my_application.cc
renderers/flutter/test/: widget_test.dart
rollup/: rollup.config.js
src/: app.js  css.js  index.js  index.js.tmp  polyfill.js  renderer.js  test.js  text.js  todo.js  view.js
src/components/: button.js  flatlist.js  icon.js  image.js  index.js  scrollview.js  text.js  textinput.js  view.js
src/samples/: index.html  index.js
